# ai-job-recommendation

./: .gitignore  DEPLOYMENT.md  README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
src/: env.py  helper.py  job_api.py
