[project]
name = "ai-job-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=1.12.0",
    "google-genai>=1.26.0",
    "mcp[cli]>=1.12.1",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.0",
]
